--- a/ChiaYiShiRi.html
+++ b/ChiaYiShiRi.html
@@ -79,7 +79,7 @@
 
         <div class="product two">
             <div>
-                <img src="/ChiaPic/1.webp" alt="">
+                <img src="/ChiaPic/1.png" alt="">
                 <h4 class="productName">賈以食日-拌雙粉 醋香豆瓣 (1袋/3入)</h4>
                 <del class="p1">NT249$</del>
                 <p class="p2">NT230$</p>
