changes a and title

--- a/ThePower.html
+++ b/ThePower.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fake Imperion</title>
     <style>
         *{
             margin: 0;
@@ -460,6 +460,10 @@
         }
         footer p{
             display: inline;
+        } 
+        footer a{
+            text-decoration: none;
+            color: tan;
         } 
         footer .email{
             background-color: white;
