--- a/ThePower.html
+++ b/ThePower.html
@@ -135,6 +135,9 @@
             border-radius: 5px;
             border: 0;
         }
+        .unleash button:hover{
+            background-color: rgb(177, 166, 153);
+        }
         .unleash .left{
             font-size: 25px;
             color: whitesmoke;
@@ -449,6 +452,9 @@
             height: 40px;
             border: 0;
         }
+        .email .input button:hover{
+            background-color: rgb(177, 166, 153);
+        }
 
         footer{
             height: 280px;
@@ -481,6 +487,14 @@
             width: 40px;
             background-color: tan;
             border-radius: 50%;
+        }
+        footer .media div:hover{
+            background-color: rgb(97, 92, 86);
+        }
+        footer .media div button{
+            width: 40px;
+            height: 40px;
+            opacity: 0;
         }
     </style>
 </head>
@@ -773,10 +787,18 @@
             <p>Phone: </p><a href="#">800 1234 56 78</a>
         </div>
         <div class="media">
-            <div class="in"></div>
-            <div class="twitter"></div>
-            <div class="fb"></div>
-            <div class="ig"></div>
+            <div class="in">
+                <a href="#"><button></button></a>
+            </div>
+            <div class="twitter">
+                <a href="#"><button></button></a>
+            </div>
+            <div class="fb">
+                <a href="#"><button></button></a>
+            </div>
+            <div class="ig">
+                <a href="#"><button></button></a>
+            </div>
         </div>
         <div class="cr">&COPY;2021 Imperion.All Rights Reserved.</div>
     </footer>
