--- a/0CssHW/ex03.html
+++ b/0CssHW/ex03.html
@@ -31,7 +31,7 @@
             box-sizing: border-box;
             box-shadow: 5px 0 10px hsla(240, 40%, 20%, .6);
             position: relative;
-            /* transform: translate(-100%); */
+            transform: translate(-100%);
             transition: .3s;
         }
         .sideMenu form{
