--- a/0CssHW/BS.html
+++ b/0CssHW/BS.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="bs.css">
 </head>
 <body>
+    <div class="top"></div>
+    <div class="message">
+        <i class="fa fa-comments" aria-hidden="true"></i>
+    </div>
     <div class="header-wrap">
         <div class="header">
             <div class="wrap brand">
@@ -247,7 +251,7 @@
                 <h3>合作及接洽</h3>
                 <p>若為企業欲徵才、或非營利組織或公益團體希望參加我們的培訓或公益合作、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</p>
                 <br>
-                <address>Build School​ 青杉人才有限公司社團法人台灣青築未來協會 Build the Future(內政部立案 : 台內團字第 1090033261 號)email: contact@build-school.com 電話: 02-66057606​台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)</address>
+                <address>Build School​ 青杉人才有限公司<br>社團法人台灣青築未來協會 Build the Future <br>(內政部立案 : 台內團字第 1090033261 號) <br>email: contact@build-school.com 電話: 02-66057606 <br>​台北市忠孝東路三段96號11F-1 (台北科大對面/忠孝新生站3號出口)</address>
             </div>
             <div class="bottom">
                 <div class="media">
@@ -259,6 +263,7 @@
                     <p>&copy; 2020 by Build School</p>
                 </div>
             </div>
+            <a href="#top"><button>︿</button></a>
         </div>
     </div>
     <!-- JavaScript Bundle with Popper -->
