--- a/0JsHW/TaiwanWaterMap.html
+++ b/0JsHW/TaiwanWaterMap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Simple Map google地图</title>
+    <title>Simple Map google地圖</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <style type="text/css">
         /* Always set the map height explicitly to define the size of the div
